--- a/style.css
+++ b/style.css
@@ -22,3 +22,8 @@ body {
   text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
     1px 1px 0 white;
 }
+
+.sprites {
+  position: relative;
+  top: -40%;
+}
