--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@ body {
     1px 1px 0 white;
 }
 
-.sprites {
+#test {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 20%;
+  justify-content: space-between;
   position: relative;
-  top: -40%;
+  left: 40%;
 }
