--- a/style.css
+++ b/style.css
@@ -1,23 +1,3 @@
-:root {
-  --bugType: #a8b820;
-  --darkType: #705848;
-  --normalType: #a8a878;
-  --fireType: #f08030;
-  --waterType: #6890f0;
-  --electricType: #f8d030;
-  --grassType: #78c850;
-  --flyingType: #a890f0;
-  --steelType: #b8b8d0;
-  --groundType: #e0c068;
-  --poisonType: #a040a0;
-  --iceStyle: #98d8d8;
-  --fightingStyle: #c03028;
-  --psychicType: #f85888;
-  --ghostType: #705898;
-  --dragonType: #7038f8;
-  --fairyType: #f0b6bc;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -70,6 +50,7 @@ body {
 .type {
   display: flex;
   justify-content: center;
-  padding-top: 15%;
+  padding-top: 7.5%;
+  padding-bottom: 7.5%;
   font-size: 1.3em;
 }
