--- a/style.css
+++ b/style.css
@@ -62,3 +62,15 @@ body {
   width: 125px;
   padding-left: 40px;
 }
+
+#buttonContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 90px;
+}
+
+.button {
+  padding: 5px 6px;
+  font-size: 1.5em;
+}
