--- a/style.css
+++ b/style.css
@@ -74,3 +74,16 @@ body {
   padding: 5px 6px;
   font-size: 1.5em;
 }
+
+#searchbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input {
+  padding: 0.4% 3% 0.4% 2.5%;
+  text-align: center;
+}
+
+
