--- a/style.css
+++ b/style.css
@@ -75,15 +75,19 @@ body {
   font-size: 1.5em;
 }
 
-#searchbar {
+#search {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-input {
+#searchbar {
   padding: 0.4% 3% 0.4% 2.5%;
   text-align: center;
+  margin-right: 1%
 }
 
+#searchButton{
+  padding: 5px 2%;
+}
 
